# codeforces

./: .gitignore  CMakeLists.txt  README.md  submission.cpp
codeforces/: CMakeLists.txt
codeforces/include/: problems.h
codeforces/source/: team.cpp  watermelon.cpp  wayTooLongWords.cpp
codeforces/src/: Aproblems.cpp
codeforces/test/: Aproblems-test.cpp  CMakeLists.txt  team-test.cpp  watermelon-test.cpp  wayTooLongWords-test.cpp
